Update SuiClient.signAndExecuteTransactionBlock link in useSignAndExecuteTransaction page

--- a/sdk/docs/pages/dapp-kit/wallet-hooks/useSignAndExecuteTransactionBlock.mdx
+++ b/sdk/docs/pages/dapp-kit/wallet-hooks/useSignAndExecuteTransactionBlock.mdx
@@ -61,5 +61,5 @@ function MyComponent() {
 - `chain`: (optional) The chain identifier the transaction block should be signed for.
 
 In addition to these options, you can also pass any options that the
-[SuiClient.signAndExecuteTransactionBlock](http://localhost:3000/typescript/sui-client#signandexecutetransactionblock)
+[SuiClient.signAndExecuteTransactionBlock](https://sdk.mystenlabs.com/typedoc/classes/_mysten_sui_js.client.SuiClient.html#signAndExecuteTransactionBlock)
 method accepts.
